you can log into admin and forum with different users.

--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -29,7 +29,7 @@
       </assemblies>
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      <forms name="ForumCompositeAuth" loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
     <pages>
       <namespaces>
