--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -29,6 +29,7 @@
 		</compilation>
 		<authentication mode="Forms">
 			<forms 
+				name="AdminCompositeAuth"
 				loginUrl="~/Authentication/Signin" 
 				timeout="2880" />
 		</authentication>
