--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -129,6 +129,7 @@
     <Content Include="Content\chromatron\js\jquery\jquery.nyroModal.custom.js" />
     <Content Include="Content\chromatron\js\jquery\jquery.nyromodal.js" />
     <Content Include="Content\clear.gif" />
+    <Content Include="Content\date.js" />
     <Content Include="Content\jquery.cookie.js" />
     <Content Include="Content\jeditable\jquery.jeditable.js" />
     <Content Include="Content\jeditable\jquery.jeditable.mini.js" />
@@ -488,7 +489,7 @@
     <Content Include="Views\Badge\_NewBadge.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Moderation\Posts.cshtml" />
+    <Content Include="Views\Moderation\Items.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Forum\AuthenticationProviders.cshtml" />
@@ -577,7 +578,7 @@
     <Content Include="Views\Shared\_pagination.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Moderation\Comments.cshtml" />
+    <Content Include="Views\Moderation\_list.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
