--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -57,12 +57,16 @@
     <Compile Include="AgentInfo.cs" />
     <Compile Include="Commands\ActivateCategory.cs" />
     <Compile Include="Commands\ActivateContent.cs" />
+    <Compile Include="Commands\ApproveComment.cs" />
     <Compile Include="Commands\ApprovePost.cs" />
     <Compile Include="Commands\ForumModerated.cs" />
+    <Compile Include="Commands\RejectComment.cs" />
     <Compile Include="Commands\RejectPost.cs" />
     <Compile Include="Commands\SetForumTheme.cs" />
+    <Compile Include="Processors\ApproveCommentProcessor.cs" />
     <Compile Include="Processors\ApprovePostProcessor.cs" />
     <Compile Include="PostNotFoundException.cs" />
+    <Compile Include="CommentNotFoundException.cs" />
     <Compile Include="Processors\RejectPostProcessor.cs" />
     <Compile Include="Processors\SetForumThemeProcessor.cs" />
     <Compile Include="Processors\ActivateCategoryProcessor.cs" />
@@ -110,8 +114,10 @@
     <Compile Include="Commands\VoteOnPost.cs" />
     <Compile Include="Processors\CommentOnPostProcessor.cs" />
     <Compile Include="Processors\PublishPostProcessor.cs" />
+    <Compile Include="Queries\ModeratedCommentQueries.cs" />
     <Compile Include="Queries\ModeratedPostQueries.cs" />
-    <Compile Include="ReadModels\ModeratedPosts.cs" />
+    <Compile Include="ReadModels\ModeratedComment.cs" />
+    <Compile Include="ReadModels\ModeratedItems.cs" />
     <Compile Include="ReadModels\ModeratedPost.cs" />
     <Compile Include="UserNotFoundException.cs" />
     <Compile Include="Processors\VoteOnCommentProcessor.cs" />
