--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -126,7 +126,7 @@
     <Content Include="Content\broom.png" />
     <Content Include="Content\chromatron\css\jquery.nyromodal.css" />
     <Content Include="Content\chromatron\img\logo.jpg" />
-    <Content Include="Content\chromatron\img\sample_logo2.png" />
+    <Content Include="Content\chromatron\img\forum-themes\test-theme2.png" />
     <Content Include="Content\chromatron\js\jquery\jquery.nyroModal.custom.js" />
     <Content Include="Content\chromatron\js\jquery\jquery.nyromodal.js" />
     <Content Include="Content\clear.gif" />
@@ -136,6 +136,7 @@
     <Content Include="Content\jeditable\jquery.jeditable.mini.js" />
     <Content Include="Content\jquery.timers-1.2.js" />
     <Content Include="Content\logo.jpg" />
+    <Content Include="Content\chromatron\img\logo2.jpg" />
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.min.js" />
     <Content Include="Content\admin-ui.js" />
     <Compile Include="Controllers\AuthenticationController.cs" />
@@ -260,7 +261,7 @@
     <Content Include="Content\chromatron\img\jquery\tooltip.gif" />
     <Content Include="Content\chromatron\img\sample_image.jpg" />
     <Content Include="Content\chromatron\img\sample_image_large.jpg" />
-    <Content Include="Content\chromatron\img\sample_logo.png" />
+    <Content Include="Content\chromatron\img\forum-themes\test-theme1.png" />
     <Content Include="Content\chromatron\img\sample_user.png" />
     <Content Include="Content\chromatron\img\widgets\widget_add.png" />
     <Content Include="Content\chromatron\img\widgets\widget_decrease.png" />
@@ -283,7 +284,7 @@
     <Content Include="Content\sample_user_icon.png" />
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.css" />
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1-close.png" />
-    <Content Include="Content\swiss.png" />
+    <Content Include="Content\chromatron\img\forum-themes\swiss.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
