added swiss purple and swiss blue themes

--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -216,6 +216,24 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Content\themes\swiss-purple\custom.css" />
+    <Content Include="Content\themes\swiss-purple\favicon.png" />
+    <Content Include="Content\themes\swiss-purple\images\bookmark-off.png" />
+    <Content Include="Content\themes\swiss-purple\images\bookmark-on.png" />
+    <Content Include="Content\themes\swiss-purple\images\logo.gif" />
+    <Content Include="Content\themes\swiss-purple\images\rss.png" />
+    <Content Include="Content\themes\swiss-purple\images\rss_thread.png" />
+    <Content Include="Content\themes\swiss-purple\purple\search-arrow.png" />
+    <Content Include="Content\themes\swiss-purple\style.css" />
+    <Content Include="Content\themes\swiss-green\custom.css" />
+    <Content Include="Content\themes\swiss-green\favicon.png" />
+    <Content Include="Content\themes\swiss-green\green\search-arrow.png" />
+    <Content Include="Content\themes\swiss-green\images\bookmark-off.png" />
+    <Content Include="Content\themes\swiss-green\images\bookmark-on.png" />
+    <Content Include="Content\themes\swiss-green\images\logo.gif" />
+    <Content Include="Content\themes\swiss-green\images\rss.png" />
+    <Content Include="Content\themes\swiss-green\images\rss_thread.png" />
+    <Content Include="Content\themes\swiss-green\style.css" />
     <Content Include="Content\themes\swiss-blue\blue\search-arrow.png" />
     <Content Include="Content\themes\swiss-blue\custom.css" />
     <Content Include="Content\themes\swiss-blue\favicon.png" />
