--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -131,12 +131,14 @@
     <Content Include="Content\chromatron\js\jquery\jquery.nyromodal.js" />
     <Content Include="Content\clear.gif" />
     <Content Include="Content\date.js" />
+    <Content Include="Content\jeditable\jquery.jeditable.wysiwyg.js" />
     <Content Include="Content\jquery.cookie.js" />
     <Content Include="Content\jeditable\jquery.jeditable.js" />
     <Content Include="Content\jeditable\jquery.jeditable.mini.js" />
     <Content Include="Content\jquery.timers-1.2.js" />
     <Content Include="Content\logo.jpg" />
     <Content Include="Content\chromatron\img\logo2.jpg" />
+    <Content Include="Content\logo_3.png" />
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.min.js" />
     <Content Include="Content\admin-ui.js" />
     <Compile Include="Controllers\AuthenticationController.cs" />
