machine-specific configs; made some minor changes to forum ui; fixed bug in authentication routine

--- a/src/sdk/AgentConsole/AgentConsole.csproj
+++ b/src/sdk/AgentConsole/AgentConsole.csproj
@@ -89,6 +89,10 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Config\bluejay.custom.config">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Config\custom.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
