--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -585,6 +585,12 @@
   <ItemGroup>
     <Content Include="Views\Moderation\_list.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Config\bluejay.custom.config">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
