--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -316,6 +316,10 @@
     <Content Include="Config\djlancerock.custom.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Config\bluejay.custom.config">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Content\site.chirp.coffee" />
     <None Include="Content\styles.chirp.less" />
     <Content Include="Views\Post\Create.cshtml" />
