--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -138,6 +138,7 @@
     <Content Include="Content\jquery.timers-1.2.js" />
     <Content Include="Content\logo.jpg" />
     <Content Include="Content\chromatron\img\logo2.jpg" />
+    <Content Include="Content\logo_3.jpg" />
     <Content Include="Content\logo_3.png" />
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.min.js" />
     <Content Include="Content\admin-ui.js" />
@@ -586,10 +587,7 @@
     <Content Include="Views\Moderation\_list.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Config\bluejay.custom.config">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Config\bluejay.custom.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
