--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <Compile Include="ActionFilters\PopulateForumWideViewBag.cs" />
     <Compile Include="Controllers\AddUserSpecificDataAttribute.cs" />
+    <Compile Include="Controllers\NewTemplateController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
@@ -147,19 +148,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Readme\glimpse.mvc3.readme.txt" />
-    <Content Include="Content\img\image-placeholder.png" />
-    <Content Include="Content\site.js">
-      <DependentUpon>site.chirp.coffee</DependentUpon>
-    </Content>
-    <Content Include="Content\site.min.js">
-      <DependentUpon>site.chirp.coffee</DependentUpon>
-    </Content>
-    <Content Include="Content\styles.css">
-      <DependentUpon>styles.chirp.less</DependentUpon>
-    </Content>
-    <Content Include="Content\styles.min.css">
-      <DependentUpon>styles.chirp.less</DependentUpon>
-    </Content>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -281,7 +269,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Views\NewTemplate\Shared\_ForumLayout.cshtml" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
@@ -320,8 +310,6 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="Content\site.chirp.coffee" />
-    <None Include="Content\styles.chirp.less" />
     <Content Include="Views\Post\Create.cshtml" />
     <Content Include="Views\Post\AddComment.cshtml" />
     <Content Include="Views\Authentication\SignIn.cshtml" />
@@ -390,6 +378,9 @@
       <Project>{7C5DC02C-5E2E-46A2-8343-ADE8035F141B}</Project>
       <Name>ForumAgent</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NewTemplate\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
