--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -56,22 +56,28 @@
   <ItemGroup>
     <Compile Include="AgentInfo.cs" />
     <Compile Include="CategoryNotFoundException.cs" />
+    <Compile Include="Commands\ActivateBadge.cs" />
     <Compile Include="Commands\ActivateCategory.cs" />
     <Compile Include="Commands\ActivateContent.cs" />
     <Compile Include="Commands\ApproveComment.cs" />
     <Compile Include="Commands\ApprovePost.cs" />
+    <Compile Include="Commands\AwardBadge.cs" />
+    <Compile Include="Commands\CreateBadge.cs" />
     <Compile Include="Commands\ForumModerated.cs" />
     <Compile Include="Commands\RejectComment.cs" />
     <Compile Include="Commands\RejectPost.cs" />
     <Compile Include="Commands\SetForumTheme.cs" />
+    <Compile Include="Commands\UpdateBadge.cs" />
     <Compile Include="CommentNotFoundException.cs" />
     <Compile Include="ContentNotFoundException.cs" />
     <Compile Include="ForumContentNotFoundException.cs" />
     <Compile Include="ForumNotFoundException.cs" />
     <Compile Include="OrganizationNotFoundException.cs" />
     <Compile Include="PostNotFoundException.cs" />
+    <Compile Include="Processors\ActivateBadgeProcessor.cs" />
     <Compile Include="Processors\ApproveCommentProcessor.cs" />
     <Compile Include="Processors\ApprovePostProcessor.cs" />
+    <Compile Include="Processors\CreateBadgeProcessor.cs" />
     <Compile Include="Processors\RejectCommentProcessor.cs" />
     <Compile Include="Processors\RejectPostProcessor.cs" />
     <Compile Include="Processors\SetForumThemeProcessor.cs" />
@@ -83,6 +89,7 @@
     <Compile Include="Commands\CreateForumContent.cs" />
     <Compile Include="Processors\DeleteForumContentProcessor.cs" />
     <Compile Include="Commands\DeleteForumContent.cs" />
+    <Compile Include="Processors\UpdateBadgeProcessor.cs" />
     <Compile Include="Processors\UpdateForumContentProcessor.cs" />
     <Compile Include="Commands\UpdateForumContent.cs" />
     <Compile Include="Processors\CreateCategoryProcessor.cs" />
@@ -115,9 +122,12 @@
     <Compile Include="Commands\VoteOnPost.cs" />
     <Compile Include="Processors\CommentOnPostProcessor.cs" />
     <Compile Include="Processors\PublishPostProcessor.cs" />
+    <Compile Include="Queries\BadgeQueries.cs" />
     <Compile Include="Queries\ModeratedCommentQueries.cs" />
     <Compile Include="Queries\ModeratedPostQueries.cs" />
     <Compile Include="Queries\ThemeQueries.cs" />
+    <Compile Include="ReadModels\AwardedBadge.cs" />
+    <Compile Include="ReadModels\ForumBadge.cs" />
     <Compile Include="ReadModels\ForumTheme.cs" />
     <Compile Include="ReadModels\ModeratedComment.cs" />
     <Compile Include="ReadModels\ModeratedItems.cs" />
