--- a/assets/templates/Forum Skeleton/web.config
+++ b/assets/templates/Forum Skeleton/web.config
@@ -1,17 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <configuration>
-    <system.webServer>
-        <defaultDocument>
-            <files>
-                <clear />
-                <add value="home.cshtml" />
-                <add value="Default.asp" />
-                <add value="index.htm" />
-                <add value="index.html" />
-                <add value="iisstart.htm" />
-                <add value="default.aspx" />
-                <add value="Default.htm" />
-            </files>
-        </defaultDocument>
-    </system.webServer>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear/>
+        <add value="Home.cshtml"/>
+        <add value="Default.asp"/>
+        <add value="index.htm"/>
+        <add value="index.html"/>
+        <add value="iisstart.htm"/>
+        <add value="default.aspx"/>
+        <add value="Default.htm"/>
+      </files>
+    </defaultDocument>
+  </system.webServer>
+  <system.web>
+    <compilation targetFramework="4.0"/>
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+  </system.web>
 </configuration>
