--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -143,6 +143,7 @@
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.min.js" />
     <Content Include="Content\admin-ui.js" />
     <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\AvatarController.cs" />
     <Compile Include="Extensions\FilterContextExtensions.cs" />
     <Compile Include="Controllers\BadgeController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
     <Compile Include="Models\CreateBadgeInputModel.cs" />
     <Compile Include="Models\CreateCategoryInputModel.cs" />
+    <Compile Include="Models\CreateForumAvatarInputModel.cs" />
     <Compile Include="Models\CreateForumContentInputModel.cs" />
     <Compile Include="Models\CreateForumInputModel.cs" />
     <Compile Include="Models\CreateOrganizationAndRegisterUserInputModel.cs" />
@@ -593,6 +595,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Badge\_UpdateBadge.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Avatar\List.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Avatar\_NewAvatar.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
