--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -56,12 +56,14 @@
   <ItemGroup>
     <Compile Include="AgentInfo.cs" />
     <Compile Include="CategoryNotFoundException.cs" />
+    <Compile Include="Commands\ActivateAvatar.cs" />
     <Compile Include="Commands\ActivateBadge.cs" />
     <Compile Include="Commands\ActivateCategory.cs" />
     <Compile Include="Commands\ActivateContent.cs" />
     <Compile Include="Commands\ApproveComment.cs" />
     <Compile Include="Commands\ApprovePost.cs" />
     <Compile Include="Commands\AwardBadge.cs" />
+    <Compile Include="Commands\CreateAvatar.cs" />
     <Compile Include="Commands\CreateBadge.cs" />
     <Compile Include="Commands\ForumModerated.cs" />
     <Compile Include="Commands\RejectComment.cs" />
@@ -74,9 +76,11 @@
     <Compile Include="ForumNotFoundException.cs" />
     <Compile Include="OrganizationNotFoundException.cs" />
     <Compile Include="PostNotFoundException.cs" />
+    <Compile Include="Processors\ActivateAvatarProcessor.cs" />
     <Compile Include="Processors\ActivateBadgeProcessor.cs" />
     <Compile Include="Processors\ApproveCommentProcessor.cs" />
     <Compile Include="Processors\ApprovePostProcessor.cs" />
+    <Compile Include="Processors\CreateAvatarProcessor.cs" />
     <Compile Include="Processors\CreateBadgeProcessor.cs" />
     <Compile Include="Processors\RejectCommentProcessor.cs" />
     <Compile Include="Processors\RejectPostProcessor.cs" />
@@ -122,11 +126,15 @@
     <Compile Include="Commands\VoteOnPost.cs" />
     <Compile Include="Processors\CommentOnPostProcessor.cs" />
     <Compile Include="Processors\PublishPostProcessor.cs" />
+    <Compile Include="Queries\AvatarQueries.cs" />
     <Compile Include="Queries\BadgeQueries.cs" />
     <Compile Include="Queries\ModeratedCommentQueries.cs" />
     <Compile Include="Queries\ModeratedPostQueries.cs" />
     <Compile Include="Queries\ThemeQueries.cs" />
+    <Compile Include="ReadModels\AvailableAvatars.cs" />
+    <Compile Include="ReadModels\AvailableBadges.cs" />
     <Compile Include="ReadModels\AwardedBadge.cs" />
+    <Compile Include="ReadModels\ForumAvatar.cs" />
     <Compile Include="ReadModels\ForumBadge.cs" />
     <Compile Include="ReadModels\ForumTheme.cs" />
     <Compile Include="ReadModels\ModeratedComment.cs" />
