--- a/src/framework/Euclid.Framework.Models/Euclid.Framework.Models.csproj
+++ b/src/framework/Euclid.Framework.Models/Euclid.Framework.Models.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="DefaultReadModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyntheticReadModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Euclid.Common\Euclid.Common.csproj">
