--- a/tests/Euclid.Sdk.IntegrationTests/app.config
+++ b/tests/Euclid.Sdk.IntegrationTests/app.config
@@ -8,10 +8,7 @@
 	  </sectionGroup>
   </configSections>
   <connectionStrings>
-	  <!-- 
-			<add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
-		-->
-	  <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+	  <add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	  <add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
   </connectionStrings>
   <system.data>
