--- a/tests/Euclid.Sdk.TestComposite/Web.config
+++ b/tests/Euclid.Sdk.TestComposite/Web.config
@@ -15,22 +15,19 @@
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
 		<add key="RouteDebugger:Enabled" value="false" />
 		<add key="log4net.Internal.Debug" value="false"/>
-    </appSettings>
+	</appSettings>
 	<system.diagnostics>
 		<trace autoflush="true">
 			<listeners>
 				<add
-                    name="textWriterTraceListener"
-                    type="System.Diagnostics.TextWriterTraceListener"
-                    initializeData="C:\tmp\log4net.txt" />
+					name="textWriterTraceListener"
+					type="System.Diagnostics.TextWriterTraceListener"
+					initializeData="C:\tmp\log4net.txt" />
 			</listeners>
 		</trace>
 	</system.diagnostics>
 	<connectionStrings>
-            <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
-		<!-- 
-		<add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
-        -->
+			<add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0">
@@ -88,7 +85,7 @@
 		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+			<connectionString value="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
 			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Test Composite')" />
 			<parameter>
 				<parameterName value="@log_date" />
