added pagination to content

--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -136,6 +136,7 @@
     <Compile Include="ReadModels\AvailableAvatars.cs" />
     <Compile Include="ReadModels\AvailableBadges.cs" />
     <Compile Include="ReadModels\AvailableCategories.cs" />
+    <Compile Include="ReadModels\AvailableContent.cs" />
     <Compile Include="ReadModels\AwardedBadge.cs" />
     <Compile Include="ReadModels\ForumAvatar.cs" />
     <Compile Include="ReadModels\ForumBadge.cs" />
