--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Commands\CreateForumContent.cs" />
     <Compile Include="Processors\DeleteForumContentProcessor.cs" />
     <Compile Include="Commands\DeleteForumContent.cs" />
+    <Compile Include="Processors\UnblockUserProcessor.cs" />
     <Compile Include="Processors\UpdateAvatarProcessor.cs" />
     <Compile Include="Processors\UpdateBadgeProcessor.cs" />
     <Compile Include="Processors\UpdateForumContentProcessor.cs" />
