--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/ForumSkeletonMvc.csproj
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/ForumSkeletonMvc.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\PostListingController.cs" />
     <Compile Include="Controllers\RoughDraftController.cs" />
+    <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -181,12 +182,6 @@
     <Content Include="Views\RoughDraft\Post.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\RoughDraft\Tag.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\RoughDraft\Tags.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\RoughDraft\User.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -218,6 +213,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Category\All.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Tag\All.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Tag\Detail.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
