--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/ForumSkeletonMvc.csproj
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/ForumSkeletonMvc.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Controllers\PostListingController.cs" />
     <Compile Include="Controllers\RoughDraftController.cs" />
     <Compile Include="Controllers\TagController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -167,31 +168,10 @@
     <Content Include="Views\RoughDraft\partials\UserProfileTabs.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\RoughDraft\UserRecentActivity.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\RoughDraft\AllUsers.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\RoughDraft\Home.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\RoughDraft\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\RoughDraft\Post.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\RoughDraft\User.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\RoughDraft\UserBadges.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\RoughDraft\UserFavorites.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\RoughDraft\UserFriends.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\RoughDraft\partials\NewPost.cshtml" />
@@ -219,6 +199,24 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Tag\Detail.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Profile\All.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Profile\Overview.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Profile\Badges.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Profile\Favorites.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Profile\Friends.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Profile\RecentActivity.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
