--- a/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -107,6 +107,7 @@
     <Compile Include="ActionFilters\ApplicationNotPartResolverException.cs" />
     <Compile Include="ActionFilters\CannotRetrieveInputModelException.cs" />
     <Compile Include="ActionFilters\CompositeActionInvoker.cs" />
+    <Compile Include="ActionFilters\FormatExceptionAttribute.cs" />
     <Compile Include="ActionFilters\TypeMetadataNotFoundException.cs" />
     <Compile Include="ActionFilters\FormatAgentMetadata.cs" />
     <Compile Include="ActionFilters\FormatListOfBasicAgentMetadata.cs" />
